--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   },
   "name": "typescriptnode",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts"
   },
   "author": "Bonett",
   "license": "ISC",
