--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "knex": "^0.95.15",
+    "sqlite3": "^5.0.2"
   }
 }
